--- a/style.css
+++ b/style.css
@@ -245,6 +245,99 @@ nav .signup:hover,
   font-size: 0.875rem;
   line-height: 1.25rem;
   letter-spacing: 0.2px;
-  /* second-text-color */
   color: var(--second-text-color);
+}
+
+#package-1,
+#package-2 {
+  display: flex;
+  justify-content: space-between;
+  padding: 10rem 0;
+}
+
+#package-1 {
+  margin-top: 5rem;
+}
+
+.package-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 35px;
+}
+
+#package-1 .package-info {
+  width: 381px;
+}
+
+.package-info div {
+  width: 94px;
+  height: 7px;
+  background: var(--danger-color);
+}
+
+.package-info h2 {
+  font-size: 2.5rem;
+  line-height: 3.125rem;
+  letter-spacing: 0.2px;
+  color: var(--text-color);
+}
+
+.package-info p {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.2px;
+  color: var(--second-text-color);
+}
+
+#package-2 .package-info p {
+  width: 345px;
+}
+
+.package-info a {
+  text-decoration: none;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.2px;
+  color: var(--primary-color);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+#package-2 .video {
+  background-image: url("images/package-2.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 513px;
+  height: 363px;
+  border-radius: 1.25rem;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#package-2 .video .gradient {
+  position: absolute;
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 0) 14.58%,
+    rgba(56, 56, 56, 0.84) 100%
+  );
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+}
+
+#package-2 .video .button-container {
+  padding: 34.8px 36.8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background: var(--primary-color);
+  z-index: 2;
 }
