--- a/style.css
+++ b/style.css
@@ -33,6 +33,50 @@ body {
   cursor: pointer;
 }
 
+p {
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  letter-spacing: 0.2px;
+  color: var(--second-text-color);
+}
+
+h2 {
+  font-size: 2.5rem;
+  line-height: 3.125rem;
+  letter-spacing: 0.2px;
+  color: var(--text-color);
+}
+
+h3 {
+  font-size: 1.5rem;
+  line-height: 2rem;
+  padding-right: 0;
+  color: var(--text-color);
+}
+
+h4 {
+  font-weight: 400;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  letter-spacing: 0.2px;
+  color: var(--second-text-color);
+}
+
+h5 {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.1px;
+  color: var(--primary-color);
+}
+
+h6 {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.2px;
+  color: var(--primary-color);
+}
+
 /* Header */
 header {
   position: relative;
@@ -146,9 +190,8 @@ nav .signup:hover,
 
 #hero .container .hero-img {
   position: absolute;
-  top: -20px;
-  right: -120px;
-  width: 626px;
+  top: -1.25rem;
+  right: -7.5rem;
 }
 
 .hero-info {
@@ -158,25 +201,11 @@ nav .signup:hover,
   margin-top: 5rem;
 }
 
-.hero-info h5 {
-  font-size: 1rem;
-  line-height: 1.5rem;
-  letter-spacing: 0.1px;
-  color: var(--primary-color);
-}
-
 .hero-info h1 {
   font-size: 3.625rem;
   line-height: 5rem;
   letter-spacing: 0.2px;
   color: var(--text-color);
-}
-.hero-info h4 {
-  font-weight: 400;
-  font-size: 1.25rem;
-  line-height: 1.875rem;
-  letter-spacing: 0.2px;
-  color: var(--second-text-color);
 }
 
 .hero-info .cta-buttons {
@@ -214,7 +243,7 @@ nav .signup:hover,
   margin-top: 5rem;
 }
 
-#hero .features > div {
+#hero .features .feature-item {
   display: flex;
   flex-direction: column;
   padding: 2.1875rem 2.5rem;
@@ -223,29 +252,18 @@ nav .signup:hover,
   box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
 }
 
-#hero .features > div img {
+#hero .features .feature-item img {
   width: 4.5rem;
 }
 
-#hero .features > div h3 {
-  font-size: 1.5rem;
-  line-height: 2rem;
-  letter-spacing: 0.1px;
-  color: var(--text-color);
+#hero .features .feature-item h3 {
+  margin-right: -2.5rem;
 }
 
-#hero .features > div div {
+#hero .features .feature-item div {
   height: 2px;
   background: var(--danger-color);
   width: 3.125rem;
-}
-
-#hero .features > div p {
-  font-weight: 400;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  letter-spacing: 0.2px;
-  color: var(--second-text-color);
 }
 
 #package-1,
@@ -263,32 +281,17 @@ nav .signup:hover,
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 35px;
+  gap: 2.1875rem;
 }
 
 #package-1 .package-info {
   width: 381px;
 }
 
-.package-info div {
-  width: 94px;
+.package-info .line {
+  width: 5.875rem;
   height: 7px;
   background: var(--danger-color);
-}
-
-.package-info h2 {
-  font-size: 2.5rem;
-  line-height: 3.125rem;
-  letter-spacing: 0.2px;
-  color: var(--text-color);
-}
-
-.package-info p {
-  font-weight: 400;
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-  letter-spacing: 0.2px;
-  color: var(--second-text-color);
 }
 
 #package-2 .package-info p {
@@ -303,7 +306,7 @@ nav .signup:hover,
   color: var(--primary-color);
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0.625rem;
 }
 
 #package-2 .video {
@@ -333,11 +336,336 @@ nav .signup:hover,
 }
 
 #package-2 .video .button-container {
-  padding: 34.8px 36.8px;
+  padding: 2.175rem 2.3rem;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 50%;
   background: var(--primary-color);
   z-index: 2;
+}
+
+#course {
+  padding: 7rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 7rem;
+}
+
+section .info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+
+section .info p {
+  width: 463px;
+}
+
+.product-list {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1.875rem;
+}
+
+#course .product-list .product .thumbnail {
+  height: 18.75rem;
+  position: relative;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#course .product-list .product:nth-child(1) .thumbnail {
+  background-image: url("images/product-1.png");
+}
+#course .product-list .product:nth-child(2) .thumbnail {
+  background-image: url("images/product-2.png");
+}
+#course .product-list .product:nth-child(3) .thumbnail {
+  background-image: url("images/product-3.png");
+}
+#course .product-list .product:nth-child(4) .thumbnail {
+  background-image: url("images/product-4.png");
+}
+
+#course .product-list .product .thumbnail span {
+  position: absolute;
+  padding: 0px 0.625rem;
+  left: 1.25rem;
+  top: 1.25rem;
+  background: var(--danger-color);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 3px;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.2px;
+  color: white;
+}
+#course .product-list .product .thumbnail .icons {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  gap: 0.625rem;
+  position: absolute;
+  bottom: 1.5rem;
+}
+
+#course .product-list .product .thumbnail .icons img {
+  border-radius: 50%;
+  background: white;
+  padding: 0.625rem;
+}
+
+#course .product-list .product .product-info {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5625rem 1.25rem 2.1875rem;
+  gap: 0.625rem;
+}
+
+#course .product-list .product .product-info .product-title {
+  position: relative;
+}
+
+#course .product-list .product .product-info .product-title div {
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  gap: 5px;
+  background: #2d4059;
+  border-radius: 1.25rem;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+#course .product-list .product .product-info .product-title div span {
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0.2px;
+  color: white;
+}
+
+#course .product-list .product .product-info h5 {
+  color: var(--text-color);
+}
+
+#course .product-list .product .product-info .sales {
+  display: flex;
+  align-items: center;
+  gap: 0.625rem;
+}
+
+#course .product-list .product .product-info .sales h6 {
+  color: var(--second-text-color);
+}
+
+#course .product-list .product .product-info .prices {
+  display: flex;
+  gap: 5px;
+}
+
+#course .product-list .product .product-info .prices h5:first-child {
+  color: #bdbdbd;
+}
+#course .product-list .product .product-info .prices h5:last-child {
+  color: #ffab71;
+}
+#course .product-list .product .product-info button {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  background: none;
+  padding: 0.625rem 1.25rem;
+  gap: 0.625rem;
+  width: fit-content;
+  border: 1px solid var(--primary-color);
+  border-radius: 2.3125rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.2px;
+  color: var(--primary-color);
+}
+
+#testimonial {
+  padding: 10rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 6rem;
+}
+#testimonial .testimonial-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.875rem;
+}
+
+#testimonial .testimonial-list .testimonial-item {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5625rem 1.5625rem 0rem;
+  align-items: center;
+}
+
+.testimonial-item img {
+  border-radius: 50%;
+}
+
+.testimonial-item .card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.875rem;
+  gap: 0.9375rem;
+}
+.testimonial-item .card-content p {
+  text-align: center;
+}
+
+.testimonial-item .card-content .ratings {
+  display: flex;
+  gap: 5px;
+}
+
+.testimonial-item .card-content div:last-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 1.5625rem;
+  gap: 5px;
+}
+
+.testimonial-item .card-content div:last-child h5 {
+  color: var(--text-color);
+}
+
+.testimonial-item .card-content div:last-child h6 {
+  color: var(--second-text-color);
+}
+
+#newsletter {
+  background: #fff2f3;
+}
+
+.newsletter-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10rem 0px;
+  gap: 5rem;
+}
+
+.newsletter-content .news-letter-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.625rem;
+}
+
+.newsletter-content .news-letter-info p {
+  width: 463px;
+  text-align: center;
+}
+
+.newsletter-content form {
+  width: 100%;
+  height: 3.625rem;
+  position: relative;
+}
+
+.newsletter-content form input {
+  width: 100%;
+  height: 100%;
+  background: #f9f9f9;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+  outline: none;
+  font-family: "Montserrat";
+  font-weight: 400;
+  font-size: 0.875rem;
+  line-height: 1.75rem;
+  letter-spacing: 0.2px;
+  padding: 01.25rem;
+  padding-right: 127px;
+  color: var(--second-text-color);
+}
+
+.newsletter-content form button {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  height: 100%;
+  right: 0;
+  background: var(--primary-color);
+  font-size: 0.875rem;
+  line-height: 1.75rem;
+  letter-spacing: 0.2px;
+  color: white;
+  width: 117px;
+}
+
+footer .footer-list {
+  background: #ffffff;
+  padding: 3.125rem 0px;
+  display: flex;
+  gap: 1.875rem;
+}
+
+footer .footer-list .footer-item {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+footer .footer-list .footer-item h5 {
+  color: var(--text-color);
+}
+
+footer .footer-list .footer-item .links {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+
+footer .footer-list .footer-item .links a {
+  font-family: "Montserrat";
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.2px;
+  color: var(--second-text-color);
+  text-decoration: none;
+}
+
+footer .footer-list .footer-item:nth-child(5) {
+  flex: 2;
+}
+
+footer .footer-list .footer-item:nth-child(5) .contact-list {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 0.625rem;
+}
+
+footer .footer-list .footer-item:nth-child(5) .contact-list .contact-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.625rem;
+}
+
+footer > div:last-child {
+  background: #fafafa;
+  padding: 1.5625rem 0px;
+}
+footer > div:last-child .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer > div:last-child .container h6 {
+  color: var(--second-text-color);
+}
+footer > div:last-child .container div {
+  display: flex;
+  gap: 1.25rem;
 }
