--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ h6 {
   color: var(--primary-color);
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+}
+
 /* Header */
 header {
   position: relative;
@@ -114,8 +119,6 @@ nav .login,
 nav .signup {
   color: var(--second-text-color);
   text-decoration: none;
-  font-size: 0.875rem;
-  line-height: 1.5rem;
   transition: color 0.3s ease-in-out;
 }
 
@@ -217,8 +220,7 @@ nav .signup:hover,
   padding: 0.9375rem 2.5rem;
   border-radius: 5px;
   letter-spacing: 0.2px;
-  font-size: 0.875rem;
-  line-height: 1.375rem;
+
   transition: all 0.1s ease-in-out;
 }
 .hero-info .cta-buttons button:first-child {
@@ -300,8 +302,6 @@ nav .signup:hover,
 
 .package-info a {
   text-decoration: none;
-  font-size: 0.875rem;
-  line-height: 1.5rem;
   letter-spacing: 0.2px;
   color: var(--primary-color);
   display: flex;
@@ -395,8 +395,6 @@ section .info p {
   background: var(--danger-color);
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
-  font-size: 0.875rem;
-  line-height: 1.5rem;
   letter-spacing: 0.2px;
   color: white;
 }
@@ -481,8 +479,6 @@ section .info p {
   width: fit-content;
   border: 1px solid var(--primary-color);
   border-radius: 2.3125rem;
-  font-size: 0.875rem;
-  line-height: 1.5rem;
   letter-spacing: 0.2px;
   color: var(--primary-color);
 }
@@ -582,10 +578,8 @@ section .info p {
   outline: none;
   font-family: "Montserrat";
   font-weight: 400;
-  font-size: 0.875rem;
-  line-height: 1.75rem;
   letter-spacing: 0.2px;
-  padding: 01.25rem;
+  padding: 1.25rem;
   padding-right: 127px;
   color: var(--second-text-color);
 }
@@ -597,8 +591,6 @@ section .info p {
   height: 100%;
   right: 0;
   background: var(--primary-color);
-  font-size: 0.875rem;
-  line-height: 1.75rem;
   letter-spacing: 0.2px;
   color: white;
   width: 117px;
